Last commit before logging off

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
             <p>name</p>
         </div>
         <div class="greeting"></div>
-        
+        <div class="functions">
+            <ul>
+                <li><button>New</button></li>
+                <li><button>Upload</button></li>
+                <li><button>Share</button></li>
+
+            </ul>
+        </div>
+
 
     </header>
     <div class="sidebar">
