--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Header
+    <header class="header">Header
         <div>search bar</div>
         <div class="userInfo">
             <div class="notifications"></div>
@@ -28,21 +28,21 @@
     </header>
     <div class="sidebar">
         <div class="sidebarHeading">
-            <img src="" alt="#">
+            <img class="dashIcon" src="./icons/view-dashboard-outline.svg" alt="#">
             <h2>Dashboard</h2>
         </div>
         <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities</li>
+            <li><img class="icons" src="./icons/home.svg" alt="">Home</li>
+            <li><img class="icons" src="./icons/card-account-details-outline.svg" alt="">Profile</li>
+            <li><img class="icons" src="./icons/message-outline.svg" alt="">Messages</li>
+            <li><img class="icons" src="./icons/history.svg" alt="">History</li>
+            <li><img class="icons" src="./icons/list-box-outline.svg" alt="">Tasks</li>
+            <li><img class="icons" src="./icons/account-group.svg" alt="">Communities</li>
         </ul>
         <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li><img class="icons" src="./icons/cog.svg" alt="">Settings</li>
+            <li><img class="icons" src="./icons/account-question-outline.svg" alt="">Support</li>
+            <li><img class="icons" src="./icons/shield-account.svg" alt="">Privacy</li>
         </ul>
     </div>
     <div class="projectBoard">
