Adjusted the layout of the sidebar so that i was happy made some adjustments so that the layout is responsive to the window size also

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <li><button>New</button></li>
                 <li><button>Upload</button></li>
                 <li><button>Share</button></li>
-
             </ul>
         </div>
 
@@ -32,17 +31,17 @@
             <h2>Dashboard</h2>
         </div>
         <ul>
-            <li><img class="icons" src="./icons/home.svg" alt="">Home</li>
-            <li><img class="icons" src="./icons/card-account-details-outline.svg" alt="">Profile</li>
-            <li><img class="icons" src="./icons/message-outline.svg" alt="">Messages</li>
-            <li><img class="icons" src="./icons/history.svg" alt="">History</li>
-            <li><img class="icons" src="./icons/list-box-outline.svg" alt="">Tasks</li>
-            <li><img class="icons" src="./icons/account-group.svg" alt="">Communities</li>
+            <li><img class="icons" src="./icons/home.svg" alt=""><a href="">Home</a></li>
+            <li><img class="icons" src="./icons/card-account-details-outline.svg" alt=""><a href="">Profile</a></li>
+            <li><img class="icons" src="./icons/message-outline.svg" alt=""><a href="">Messages</a></li>
+            <li><img class="icons" src="./icons/history.svg" alt=""><a href="">History</a></li>
+            <li><img class="icons" src="./icons/list-box-outline.svg" alt=""><a href="">Tasks</a></li>
+            <li><img class="icons" src="./icons/account-group.svg" alt=""><a href="">Communities</a></li>
         </ul>
         <ul>
-            <li><img class="icons" src="./icons/cog.svg" alt="">Settings</li>
-            <li><img class="icons" src="./icons/account-question-outline.svg" alt="">Support</li>
-            <li><img class="icons" src="./icons/shield-account.svg" alt="">Privacy</li>
+            <li><img class="icons" src="./icons/cog.svg" alt=""><a href="">Settings</a></li>
+            <li><img class="icons" src="./icons/account-question-outline.svg" alt=""><a href="">Support</a></li>
+            <li><img class="icons" src="./icons/shield-account.svg" alt=""><a href="">Privacy</a></li>
         </ul>
     </div>
     <div class="projectBoard">
