--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="header">Header
-        <div>search bar</div>
+    <header class="header">
+        <div class="searchBar">
+            <img class="icons" src="./icons/magnify.svg" alt="">
+            <input type="search">
+        </div>
         <div class="userInfo">
             <div class="notifications"></div>
             <img src="" alt="#">
@@ -48,15 +51,38 @@
         <div class="projects">
             <h3>Your Projects</h3>
             <div class="card">
-                <h4></h4>
+                <h4>Calculator</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
-                <img src="" alt="#">
-                <img src="" alt="#">
-                <img src="" alt="#">
+                <div class="cardOptions">
+                    <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
+                    <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
+                    <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
+                </div>
             </div>
+            <div class="card">
+                <h4>Calculator</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
+                <div class="cardOptions">
+                    <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
+                    <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
+                    <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
+                </div>
+            </div>
+            <div class="card">
+                <h4>Calculator</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
+                <div class="cardOptions">
+                    <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
+                    <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
+                    <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
+                </div>
+            </div>
+
+
+
         </div>
         <div class="announcements">
-            <h1></h1>
+            <h3>Announcements</h3>
             <div class="updates"></div>
         </div>
         <div class="trending">
