--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="" alt="#">
             <p>name</p>
         </div>
-        <div class="greeting"></div>
+        <div class="greeting">greeting</div>
         <div class="functions">
             <ul>
                 <li><button>New</button></li>
