Added comments for clarity

--- a/index.html
+++ b/index.html
@@ -7,17 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Header Section -->
     <header class="header">
+        <!-- Search Bar -->
         <div class="searchBar">
             <img class="icons" src="./icons/magnify.svg" alt="">
             <input type="search">
         </div>
+
+        <!-- User Information -->
         <div class="userInfo">
             <div class="notifications"></div>
             <img src="" alt="#">
             <p>name</p>
         </div>
+
+        <!-- Greeting -->
         <div class="greeting">greeting</div>
+
+        <!-- Functions -->
         <div class="functions">
             <ul>
                 <li><button>New</button></li>
@@ -25,14 +34,17 @@
                 <li><button>Share</button></li>
             </ul>
         </div>
-
-
     </header>
+
+    <!-- Sidebar Section -->
     <div class="sidebar">
+        <!-- Sidebar Heading -->
         <div class="sidebarHeading">
             <img class="dashIcon" src="./icons/view-dashboard-outline.svg" alt="#">
             <h2>Dashboard</h2>
         </div>
+
+        <!-- Sidebar Navigation -->
         <ul>
             <li><img class="icons" src="./icons/home.svg" alt=""><a href="">Home</a></li>
             <li><img class="icons" src="./icons/card-account-details-outline.svg" alt=""><a href="">Profile</a></li>
@@ -41,18 +53,25 @@
             <li><img class="icons" src="./icons/list-box-outline.svg" alt=""><a href="">Tasks</a></li>
             <li><img class="icons" src="./icons/account-group.svg" alt=""><a href="">Communities</a></li>
         </ul>
+
+        <!-- Additional Navigation -->
         <ul>
             <li><img class="icons" src="./icons/cog.svg" alt=""><a href="">Settings</a></li>
             <li><img class="icons" src="./icons/account-question-outline.svg" alt=""><a href="">Support</a></li>
             <li><img class="icons" src="./icons/shield-account.svg" alt=""><a href="">Privacy</a></li>
         </ul>
     </div>
+
+    <!-- Project Board Section -->
     <div class="projectBoard">
+        <!-- Projects Section -->
         <div class="projects">
             <h3>Your Projects</h3>
+
+            <!-- Individual Project Cards -->
             <div class="card">
                 <h4>Calculator</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
                     <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
                     <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
@@ -61,7 +80,7 @@
             </div>
             <div class="card">
                 <h4>Calculator</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
                     <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
                     <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
@@ -70,7 +89,7 @@
             </div>
             <div class="card">
                 <h4>Calculator</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempore soluta doloribus a dignissimos expedita, provident asperiores harum maiores eos nisi est labore. Repellendus, necessitatibus iure. Ut et dolorum sequi!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
                     <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
                     <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
@@ -78,13 +97,16 @@
                 </div>
             </div>
 
-
-
+            <!-- Repeat similar card structures for other projects -->
         </div>
+
+        <!-- Announcements Section -->
         <div class="announcements">
             <h3>Announcements</h3>
             <div class="updates"></div>
         </div>
+
+        <!-- Trending Section -->
         <div class="trending">
             <div class="user">
                 <img src="" alt="">
@@ -92,9 +114,9 @@
                 <p>Project</p>
             </div>
         </div>
-
-            
     </div>
+
+    <!-- JavaScript Script -->
     <script src="script.js"></script>
 </body>
 </html>
