changes to colours so that they are more bareable

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 
         <!-- User Information -->
         <div class="userInfo">
-            <div class="notifications"></div>
+            <img src="/icons/bell-ring-outline.svg" class="icons notifications" alt="#">
             <img src="" alt="#">
-            <p>name</p>
+            <p>Dominic</p>
         </div>
 
         <!-- Greeting -->
-        <div class="greeting">greeting</div>
+        <div class="greeting">
+            <img src="" alt="">
+            <p>Hi There,</p>
+            <p class="name">Dominic</p>
+        </div>
 
         <!-- Functions -->
         <div class="functions">
