working on the layout I have made some adjustements to consolidate some of the css. I  have also tinkered with a lot of the spacing for the dashboard. it still needs work.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- Header Section -->
-    <header class="header">
+    <header class="header hasShading">
         <!-- Search Bar -->
         <div class="searchBar">
             <img class="icons" src="./icons/magnify.svg" alt="">
@@ -19,15 +19,17 @@
         <!-- User Information -->
         <div class="userInfo">
             <img src="/icons/bell-ring-outline.svg" class="icons notifications" alt="#">
-            <img src="" alt="#">
+            <img src="/icons/account.svg" class="icons" alt="#">
             <p>Dominic</p>
         </div>
 
         <!-- Greeting -->
         <div class="greeting">
-            <img src="" alt="">
-            <p>Hi There,</p>
-            <p class="name">Dominic</p>
+            <img src="icons/account.svg" class="icons" alt="">
+            <div>
+                <p>Hi there,</p>
+                <p class="name">Dominic</p>
+            </div>
         </div>
 
         <!-- Functions -->
@@ -73,7 +75,7 @@
             <h3>Your Projects</h3>
 
             <!-- Individual Project Cards -->
-            <div class="card">
+            <div class="card hasShading">
                 <h4>Calculator</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
@@ -82,7 +84,7 @@
                     <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
                 </div>
             </div>
-            <div class="card">
+            <div class="card hasShading">
                 <h4>Calculator</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
@@ -91,7 +93,7 @@
                     <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
                 </div>
             </div>
-            <div class="card">
+            <div class="card hasShading">
                 <h4>Calculator</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="cardOptions">
@@ -100,6 +102,16 @@
                     <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
                 </div>
             </div>
+            <div class="card hasShading">
+                <h4>Calculator</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <div class="cardOptions">
+                    <img class="icons" href="index.html" src="./icons/star-plus.svg" alt="#">
+                    <img class="icons" src="./icons/eye-plus-outline.svg" alt="#">
+                    <img class="icons" src="./icons/share-variant-outline.svg" alt="#">
+                </div>
+            </div>
+
 
             <!-- Repeat similar card structures for other projects -->
         </div>
@@ -107,15 +119,41 @@
         <!-- Announcements Section -->
         <div class="announcements">
             <h3>Announcements</h3>
-            <div class="updates"></div>
+            <div class="updates hasShading">
+                <div class="updateInfo">
+                    <h4>Site Maintenance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, fugit quaerat obcaecati incidunt perspiciatis, quo iusto exercitationem, ipsa veniam cupiditate totam magni. Dicta libero illo molestias distinctio vero inventore aspernatur!</p>
+                </div>
+                <div class="updateInfo">
+                    <h4>Site Maintenance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, fugit quaerat obcaecati incidunt perspiciatis, quo iusto exercitationem, ipsa veniam cupiditate totam magni. Dicta libero illo molestias distinctio vero inventore aspernatur!</p>
+                </div>
+                <div class="updateInfo">
+                    <h4>Site Maintenance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, fugit quaerat obcaecati incidunt perspiciatis, quo iusto exercitationem, ipsa veniam cupiditate totam magni. Dicta libero illo molestias distinctio vero inventore aspernatur!</p>
+                </div>
+            </div>
         </div>
 
         <!-- Trending Section -->
-        <div class="trending">
-            <div class="user">
-                <img src="" alt="">
-                <h5>Name</h5>
-                <p>Project</p>
+        <div class="trendingBoard">
+            <h3>Trending</h3>
+            <div class="trending hasShading">
+                <div class="user">
+                    <img class="icons" src="./icons/account.svg" alt="">
+                    <h5>@desmond</h5>
+                    <p>Doom scroll expert</p>
+                </div>
+                <div class="user">
+                    <img class="icons" src="./icons/account.svg" alt="">
+                    <h5>Name</h5>
+                    <p>Project</p>
+                </div>
+                <div class="user">
+                    <img class="icons" src="./icons/account.svg" alt="">
+                    <h5>Name</h5>
+                    <p>Project</p>
+                </div>
             </div>
         </div>
     </div>
